--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f268ac2ce50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f36489e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f268a8dff50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f268a914190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f3612de10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f3612dfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f268aead810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f268aeada10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f3674f590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f366f8a10&gt;]</pre>
 </div>
 
 </div>
