--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe65ab61f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb7fe9db2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe65a839e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe65a839fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7fe68dd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7fe68df90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe65ae01750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe65ae01950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7fec5c6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7fec5c8d0&gt;]</pre>
 </div>
 
 </div>
