--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7370163590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfc23c5790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f736fe42790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f736fe42a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfc20a2e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcfc20b80d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f73703ea6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f73703ea8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfc26637d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcfc26639d0&gt;]</pre>
 </div>
 
 </div>
