--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe1695a4990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3b113938d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe168fa6950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe169259e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b11058f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3b110681d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe169824690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe169874a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b11619910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3b11619b10&gt;]</pre>
 </div>
 
 </div>
