--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3b113938d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0f96f8e210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b11058f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3b110681d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f96c4dfd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0f96c51210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b11619910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3b11619b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f97203990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0f97203b90&gt;]</pre>
 </div>
 
 </div>
