--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb191c9f690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb74efa890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb19195ad50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb19195af90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb7485cf50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb748741d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb191f27750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb191f27990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb74e28850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb74e28a90&gt;]</pre>
 </div>
 
 </div>
