--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f652a19e750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2e65d9ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f652a602f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f652a5d0ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2e68eea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd2e68eee50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f652abc8890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f652ab65550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2e6e84410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd2e6e84610&gt;]</pre>
 </div>
 
 </div>
