--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a829cdf90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d86990d10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a82ca93d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a82ca9fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d86f5eb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d86f5ed90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a83246490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a83246690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d87509450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d87509650&gt;]</pre>
 </div>
 
 </div>
