--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3826d05950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc477a970d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f38266653d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f38266656d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc477e4ba50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc477e4bf10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3826c132d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3826c134d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc4783e0390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc4783e0590&gt;]</pre>
 </div>
 
 </div>
