--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcac43c2d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa6b0261a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcac40a3550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcac40a3250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6afc239d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa6afc23350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcac4637610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcac4637810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6b01ba310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa6b01ba510&gt;]</pre>
 </div>
 
 </div>
