--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff0bb9fc3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9594613ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0bbd05ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff0bbd05cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f959463a150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f959463ad90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0bc297450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff0bc297650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9594be8390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9594be8590&gt;]</pre>
 </div>
 
 </div>
