--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb76402590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa20fe261d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb760e6a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb75d73690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa210128b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa210103990&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb75d69610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb76324450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa210738450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2106c2590&gt;]</pre>
 </div>
 
 </div>
