--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b28d33790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f800d203910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b2901fb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b2901f5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f800c307210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f800c3252d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b295cd310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b295cd510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f800c918050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f800c8b4650&gt;]</pre>
 </div>
 
 </div>
