--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f800d203910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f05c0b66b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f800c307210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f800c3252d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f05c0e71210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f05c0e71790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f800c918050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f800c8b4650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f05c13ff390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f05c13ff590&gt;]</pre>
 </div>
 
 </div>
