--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f691ee2b510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1afeee710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6917294c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6917294e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1afbd89d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1afbd8f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f691783e4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f691783e6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b0167310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb1b0167510&gt;]</pre>
 </div>
 
 </div>
