--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ba93db090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30820e2a90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ba8ddcc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ba90c5710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3081da0f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3081da0f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ba9659490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ba9659690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f308233e510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f308233e710&gt;]</pre>
 </div>
 
 </div>
