--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc08e570950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f02374d8610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc08e86af50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc08e86ab90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02377c0350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02377c0e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc08edff450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc08edff650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0237dc3950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0237d6e590&gt;]</pre>
 </div>
 
 </div>
