--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff29fd26490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff97cbc6c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff29ee45390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff29ee45810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff97c532950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff97c532d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff29f3ec2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff29f3ec4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff97cae03d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff97cae05d0&gt;]</pre>
 </div>
 
 </div>
